deploy/k8s/base/allinone-miner/blob-grpc-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: tcp-8091-blob-miner
  labels:
    service: miner
spec:
  entryPoints:
    - blob-grpc
  routes:
  - match: HostSNI(`miner.allinone.ubsv.dev`)
    services:
    - name: miner
      port: 8091
  tls:
    # use miner-cert
#    secretName: miner-tls
    passthrough: true
